--- a/src/app/cikk/cikk-reszletek/cikk-reszletek.component.html
+++ b/src/app/cikk/cikk-reszletek/cikk-reszletek.component.html
@@ -4,59 +4,59 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].CIKKKOD}}</td>
+      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].Cikkkod}}</td>
     </tr>
     <tr>
       <td class="egylabel">Megnevezés:</td>
-      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].MEGNEVEZES}}</td>
+      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].Megnevezes}}</td>
     </tr>
     <tr>
       <td class="egylabel">Me:</td>
-      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].ME}}</td>
+      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].Me}}</td>
     </tr>
     <tr>
       <td class="egylabel">ÁFA kulcs:</td>
-      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].AFAKULCS}}</td>
+      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].Afakulcs}}</td>
     </tr>
     <tr>
       <td class="egylabel">Egységár:</td>
-      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].EGYSEGAR}}</td>
+      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].Egysegar}}</td>
     </tr>
     <tr>
       <td class="egylabel">Készletet képez:</td>
-      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].KESZLETETKEPEZ}}</td>
+      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].Keszletetkepez}}</td>
     </tr>
     <tr>
       <td class="egylabel">Tömeg, kg:</td>
-      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].TOMEGKG}}</td>
+      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].Tomegkg}}</td>
     </tr>
     <tr>
       <td class="egylabel">Termékdíj KT:</td>
-      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].TERMEKDIJKT}}</td>
+      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].Termekdijkt}}</td>
     </tr>
     <tr>
       <td class="egylabel">Termékdíj megnevezés:</td>
-      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].TERMEKDIJMEGNEVEZES}}</td>
+      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].Termekdijmegnevezes}}</td>
     </tr>
     <tr>
       <td class="egylabel">Termékdíj egységár:</td>
-      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].TERMEKDIJEGYSEGAR}}</td>
+      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].Termekdijegysegar}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td *ngIf="cikkservice.DtoSelectedIndex !== -1">{{cikkservice.Dto[cikkservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
