--- a/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
+++ b/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
@@ -10,7 +10,7 @@
       <div class="col-md-5">
         <input type="text" class="form-control form-control-sm" id="megnevezes"
                maxlength="100" required autocomplete="off"
-               [(ngModel)]="cikkservice.DtoEdited.MEGNEVEZES" name="megnevezes">
+               [(ngModel)]="cikkservice.DtoEdited.Megnevezes" name="megnevezes">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -20,7 +20,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="me"
                maxlength="10" required autocomplete="off" style="background-color: aquamarine"
-               [(ngModel)]="cikkservice.DtoEdited.ME" name="me">
+               [(ngModel)]="cikkservice.DtoEdited.Me" name="me">
       </div>
       <div class="col-md-1">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="MeZoom()">...</button>
@@ -33,7 +33,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="afakulcs"
                maxlength="10" required autocomplete="off" style="background-color: aquamarine"
-               [(ngModel)]="cikkservice.DtoEdited.AFAKULCS" name="afakulcs">
+               [(ngModel)]="cikkservice.DtoEdited.Afakulcs" name="afakulcs">
       </div>
       <div class="col-md-1">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="AfakulcsZoom()">...</button>
@@ -46,7 +46,7 @@
       <div class="col-md-2">
         <input type="number" class="form-control form-control-sm" id="egysegar"
                maxlength="10" required autocomplete="off"
-               [(ngModel)]="cikkservice.DtoEdited.EGYSEGAR" name="egysegar">
+               [(ngModel)]="cikkservice.DtoEdited.Egysegar" name="egysegar">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -55,7 +55,7 @@
       </div>
       <div class="col-md-1">
         <select type="text" class="form-control form-control-sm"
-                [(ngModel)]="cikkservice.DtoEdited.KESZLETETKEPEZ" name="kk">
+                [(ngModel)]="cikkservice.DtoEdited.Keszletetkepez" name="kk">
           <option value="false">Nem</option>
           <option value="true">Igen</option>
         </select>
@@ -68,7 +68,7 @@
       <div class="col-md-2">
         <input type="number" class="form-control form-control-sm" id="tomeg"
                maxlength="10" required autocomplete="off"
-               [(ngModel)]="cikkservice.DtoEdited.TOMEGKG" name="tomeg">
+               [(ngModel)]="cikkservice.DtoEdited.Tomegkg" name="tomeg">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -78,7 +78,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="termekdijkt"
                maxlength="10" autocomplete="off" style="background-color: aquamarine"
-               [(ngModel)]="cikkservice.DtoEdited.TERMEKDIJKT" name="termekdijkt">
+               [(ngModel)]="cikkservice.DtoEdited.Termekdijkt" name="termekdijkt">
       </div>
       <div class="col-md-1">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="TermekdijZoom()">...</button>
@@ -91,7 +91,7 @@
       <div class="col-md-4">
         <input type="text" class="form-control form-control-sm" id="termekdijmegnevezes"
                autocomplete="off" readonly
-               [(ngModel)]="cikkservice.DtoEdited.TERMEKDIJMEGNEVEZES" name="termekdijmegnevezes">
+               [(ngModel)]="cikkservice.DtoEdited.Termekdijmegnevezes" name="termekdijmegnevezes">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -101,7 +101,7 @@
       <div class="col-md-1">
         <input type="number" class="form-control form-control-sm" id="termekdijegysegar"
                autocomplete="off" readonly
-               [(ngModel)]="cikkservice.DtoEdited.TERMEKDIJEGYSEGAR" name="termekdijegysegar">
+               [(ngModel)]="cikkservice.DtoEdited.Termekdijegysegar" name="termekdijegysegar">
       </div>
     </div>
 
