--- a/src/app/cikk/cikk-beszerzes-kivet/cikk-beszerzes-kivet.component.html
+++ b/src/app/cikk/cikk-beszerzes-kivet/cikk-beszerzes-kivet.component.html
@@ -19,15 +19,15 @@
     <tbody>
     <ng-container *ngFor="let item of cikkservice.MozgasDto">
       <tr>
-        <td>{{item.BIZONYLATSZAM}}</td>
-        <td>{{item.UGYFELNEV}}</td>
-        <td>{{item.TELJESITESKELTE | datehun}}</td>
-        <td>{{item.MENNYISEG}}</td>
-        <td>{{item.ME}}</td>
-        <td>{{item.EGYSEGAR}}</td>
-        <td>{{item.PENZNEM}}</td>
-        <td>{{item.NETTO}}</td>
-        <td>{{item.NETTOFT}}</td>
+        <td>{{item.Bizonylatszam}}</td>
+        <td>{{item.Ugyfelnev}}</td>
+        <td>{{item.Teljesiteskelte | datehun}}</td>
+        <td>{{item.Mennyiseg}}</td>
+        <td>{{item.Me}}</td>
+        <td>{{item.Egysegar}}</td>
+        <td>{{item.Penznem}}</td>
+        <td>{{item.Netto}}</td>
+        <td>{{item.Nettoft}}</td>
       </tr>
     </ng-container>
     </tbody>
