--- a/src/app/cikk/cikk-list/cikk-list.component.html
+++ b/src/app/cikk/cikk-list/cikk-list.component.html
@@ -28,17 +28,17 @@
     <ng-container *ngFor="let item of cikkservice.Dto; let i = index">
       <tr>
         <td *ngIf="cikkservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
-        <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.CIKKKOD}}</td>
-        <td>{{item.MEGNEVEZES}}</td>
-        <td>{{item.ME}}</td>
-        <td>{{item.AFAKULCS}}</td>
-        <td style="text-align: right">{{item.EGYSEGAR | number: '1.2-2'}}</td>
-        <td *ngIf="item.KESZLETETKEPEZ">igen</td>
-        <td *ngIf="!item.KESZLETETKEPEZ">nem</td>
-        <td style="text-align: right">{{item.TOMEGKG | number: '1.2-2'}}</td>
-        <td>{{item.TERMEKDIJKT}}</td>
-        <td>{{item.TERMEKDIJMEGNEVEZES}}</td>
-        <td style="text-align: right">{{item.TERMEKDIJEGYSEGAR | number: '1.2-2'}}</td>
+        <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.Cikkkod}}</td>
+        <td>{{item.Megnevezes}}</td>
+        <td>{{item.Me}}</td>
+        <td>{{item.Afakulcs}}</td>
+        <td style="text-align: right">{{item.Egysegar | number: '1.2-2'}}</td>
+        <td *ngIf="item.Keszletetkepez">igen</td>
+        <td *ngIf="!item.Keszletetkepez">nem</td>
+        <td style="text-align: right">{{item.Tomegkg | number: '1.2-2'}}</td>
+        <td>{{item.Termekdijkt}}</td>
+        <td>{{item.Termekdijmegnevezes}}</td>
+        <td style="text-align: right">{{item.Termekdijegysegar | number: '1.2-2'}}</td>
       </tr>
     </ng-container>
     </tbody>
