--- a/src/app/irat/irat/irat-egy/irat-egy.component.html
+++ b/src/app/irat/irat/irat-egy/irat-egy.component.html
@@ -1,9 +1,9 @@
 <div class="alapkeret">
   <h5>{{iratservice.cim}}</h5>
   <div style="margin-bottom: 10px">
-    <div style="font-size: smaller">{{iratservice.Dto[iratservice.DtoSelectedIndex].IRATKOD}} {{iratservice.Dto[iratservice.DtoSelectedIndex].IRATTIPUS}}</div>
-    <div style="font-size: smaller">{{iratservice.Dto[iratservice.DtoSelectedIndex].UGYFELNEV}} {{iratservice.Dto[iratservice.DtoSelectedIndex].UGYFELCIM}}</div>
-    <div style="font-size: smaller">{{iratservice.Dto[iratservice.DtoSelectedIndex].TARGY}}</div>
+    <div style="font-size: smaller">{{iratservice.Dto[iratservice.DtoSelectedIndex].Iratkod}} {{iratservice.Dto[iratservice.DtoSelectedIndex].Irattipus}}</div>
+    <div style="font-size: smaller">{{iratservice.Dto[iratservice.DtoSelectedIndex].Ugyfelnev}} {{iratservice.Dto[iratservice.DtoSelectedIndex].Ugyfelcim}}</div>
+    <div style="font-size: smaller">{{iratservice.Dto[iratservice.DtoSelectedIndex].Targy}}</div>
   </div>
   <div>
     <nav>
