--- a/src/app/irat/irat/irat-szerkesztes/irat-szerkesztes.component.html
+++ b/src/app/irat/irat/irat-szerkesztes/irat-szerkesztes.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class="col-md-2">
         <select type="text" class="form-control form-control-sm"
-                [(ngModel)]="iratservice.DtoEdited.IRANY" name="irany">
+                [(ngModel)]="iratservice.DtoEdited.Irany" name="irany">
           <option>Be</option>
           <option>Ki</option>
           <option>Belső</option>
@@ -33,7 +33,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="irattipus"
                maxlength="30" required autocomplete="off" style="background-color: aquamarine"
-               [(ngModel)]="iratservice.DtoEdited.IRATTIPUS" name="irattipus">
+               [(ngModel)]="iratservice.DtoEdited.Irattipus" name="irattipus">
       </div>
       <div class="col-md-1">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="IrattipusZoom()">...</button>
@@ -47,7 +47,7 @@
       <div class="col-md-4">
         <input type="text" class="form-control form-control-sm" id="ugyfelnev"
                maxlength="200" autocomplete="off" style="background-color: aquamarine"
-               [(ngModel)]="iratservice.DtoEdited.UGYFELNEV" name="ugyfelnev">
+               [(ngModel)]="iratservice.DtoEdited.Ugyfelnev" name="ugyfelnev">
       </div>
       <div class="col-md-1">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="UgyfelZoom()">...</button>
@@ -63,7 +63,7 @@
       <div class="col-md-4">
         <input type="text" class="form-control form-control-sm" id="ugyfelcim"
                autocomplete="off" readonly="true"
-               [(ngModel)]="iratservice.DtoEdited.UGYFELCIM" name="ugyfelcim">
+               [(ngModel)]="iratservice.DtoEdited.Ugyfelcim" name="ugyfelcim">
       </div>
     </div>
 
@@ -74,7 +74,7 @@
       <div class="col-md-4">
         <input type="text" class="form-control form-control-sm" id="kuldo"
                maxlength="100" autocomplete="off"
-               [(ngModel)]="iratservice.DtoEdited.KULDO" name="kuldo">
+               [(ngModel)]="iratservice.DtoEdited.Kuldo" name="kuldo">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -84,7 +84,7 @@
       <div class="col-md-4">
         <input type="text" class="form-control form-control-sm" id="targy"
                maxlength="200" autocomplete="off"
-               [(ngModel)]="iratservice.DtoEdited.TARGY" name="targy">
+               [(ngModel)]="iratservice.DtoEdited.Targy" name="targy">
       </div>
     </div>
 
