--- a/src/app/ugyfel/ugyfel-reszletek/ugyfel-reszletek.component.html
+++ b/src/app/ugyfel/ugyfel-reszletek/ugyfel-reszletek.component.html
@@ -4,67 +4,67 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].UGYFELKOD}}</td>
+      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Ugyfelkod}}</td>
     </tr>
     <tr>
       <td class="egylabel">Név:</td>
-      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].NEV}}</td>
+      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Nev}}</td>
     </tr>
     <tr>
       <td class="egylabel">Irányítószám:</td>
-      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].IRANYITOSZAM}}</td>
+      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Iranyitoszam}}</td>
     </tr>
     <tr>
       <td class="egylabel">Helységnév:</td>
-      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].HELYSEGNEV}}</td>
+      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Helysegnev}}</td>
     </tr>
     <tr>
       <td class="egylabel">Közterület:</td>
-      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].KOZTERULET}}</td>
+      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Kozterulet}}</td>
     </tr>
     <tr>
       <td class="egylabel">Közterület tipus:</td>
-      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].KOZTERULETTIPUS}}</td>
+      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Kozterulettipus}}</td>
     </tr>
     <tr>
       <td class="egylabel">Házszám:</td>
-      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].HAZSZAM}}</td>
+      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Hazszam}}</td>
     </tr>
     <tr>
       <td class="egylabel">Adószám:</td>
-      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].ADOSZAM}}</td>
+      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Adoszam}}</td>
     </tr>
     <tr>
       <td class="egylabel">EU adószám:</td>
-      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].EUADOSZAM}}</td>
+      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Euadoszam}}</td>
     </tr>
     <tr>
       <td class="egylabel">Telefon:</td>
-      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].TELEFON}}</td>
+      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Telefon}}</td>
     </tr>
     <tr>
       <td class="egylabel">Email:</td>
-      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].EMAIL}}</td>
+      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Email}}</td>
     </tr>
     <tr>
       <td class="egylabel">Megjegyzés:</td>
-      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].MEGJEGYZES}}</td>
+      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Megjegyzes}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td *ngIf="ugyfelservice.DtoSelectedIndex !== -1">{{ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
