--- a/src/app/ugyfel/ugyfel-szerkesztes/ugyfel-szerkesztes.component.html
+++ b/src/app/ugyfel/ugyfel-szerkesztes/ugyfel-szerkesztes.component.html
@@ -10,7 +10,7 @@
       <div class="col-md-4">
         <input type="text" class="form-control form-control-sm" id="nev"
                maxlength="200" required autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.NEV" name="nev">
+               [(ngModel)]="ugyfelservice.DtoEdited.Nev" name="nev">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -20,7 +20,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="iranyitoszam"
                maxlength="20" required autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.IRANYITOSZAM" name="iranyitoszam">
+               [(ngModel)]="ugyfelservice.DtoEdited.Iranyitoszam" name="iranyitoszam">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -30,7 +30,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="helysegnev"
                maxlength="100" required autocomplete="off" style="background-color: aquamarine"
-               [(ngModel)]="ugyfelservice.DtoEdited.HELYSEGNEV" name="helysegnev">
+               [(ngModel)]="ugyfelservice.DtoEdited.Helysegnev" name="helysegnev">
       </div>
       <div class="col-md-1">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="HelysegZoom()">...</button>
@@ -43,7 +43,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="kozterulet"
                maxlength="100" required autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.KOZTERULET" name="kozterulet">
+               [(ngModel)]="ugyfelservice.DtoEdited.Kozterulet" name="kozterulet">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -53,7 +53,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="kozterulettipus"
                maxlength="20" required autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.KOZTERULETTIPUS" name="kozterulettipus">
+               [(ngModel)]="ugyfelservice.DtoEdited.Kozterulettipus" name="kozterulettipus">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -63,7 +63,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="hazszam"
                maxlength="10" required autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.HAZSZAM" name="hazszam">
+               [(ngModel)]="ugyfelservice.DtoEdited.Hazszam" name="hazszam">
       </div>
     </div>
 
@@ -74,7 +74,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="adoszam"
                maxlength="20" autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.ADOSZAM" name="adoszam">
+               [(ngModel)]="ugyfelservice.DtoEdited.Adoszam" name="adoszam">
       </div>
       <div class="col-md-8" style="color: red">
         <div style="margin-left: 5px">Magánszemélynél legyen üres, egyébként a megfelelő formátumú!</div>
@@ -87,7 +87,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="euadoszam"
                maxlength="20" autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.EUADOSZAM" name="euadoszam">
+               [(ngModel)]="ugyfelservice.DtoEdited.Euadoszam" name="euadoszam">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -97,7 +97,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="telefon"
                maxlength="20" required autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.TELEFON" name="telefon">
+               [(ngModel)]="ugyfelservice.DtoEdited.Telefon" name="telefon">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -107,7 +107,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="email"
                maxlength="50" required autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.EMAIL" name="email">
+               [(ngModel)]="ugyfelservice.DtoEdited.Email" name="email">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -117,7 +117,7 @@
       <div class="col-md-4">
         <input type="text" class="form-control form-control-sm" id="megjegyzes"
                maxlength="200" autocomplete="off"
-               [(ngModel)]="ugyfelservice.DtoEdited.MEGJEGYZES" name="megjegyzes">
+               [(ngModel)]="ugyfelservice.DtoEdited.Megjegyzes" name="megjegyzes">
       </div>
     </div>
 
