--- a/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-ujirat/projekt-bizonylatesirat-ujirat.component.html
+++ b/src/app/projekt/bizonylatesirat/projekt-bizonylatesirat-ujirat/projekt-bizonylatesirat-ujirat.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="col-md-2">
         <select type="text" class="form-control form-control-sm"
-                [(ngModel)]="projektkapcsolatservice.UjIratDto.IRANY" name="irany">
+                [(ngModel)]="projektkapcsolatservice.UjIratDto.Irany" name="irany">
           <option>Be</option>
           <option>Ki</option>
           <option>Belső</option>
@@ -32,7 +32,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="irattipus"
                maxlength="30" required autocomplete="off" style="background-color: aquamarine"
-               [(ngModel)]="projektkapcsolatservice.UjIratDto.IRATTIPUS" name="irattipus">
+               [(ngModel)]="projektkapcsolatservice.UjIratDto.Irattipus" name="irattipus">
       </div>
       <div class="col-md-1">
         <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="IrattipusZoom()">...</button>
@@ -45,7 +45,7 @@
       <div class="col-md-4">
         <input type="text" class="form-control form-control-sm" id="targy"
                maxlength="200" autocomplete="off"
-               [(ngModel)]="projektkapcsolatservice.UjIratDto.TARGY" name="targy">
+               [(ngModel)]="projektkapcsolatservice.UjIratDto.Targy" name="targy">
       </div>
     </div>
 
