--- a/src/app/ajanlatkeres/ajanlatkeres-egy/ajanlatkeres-egy.component.html
+++ b/src/app/ajanlatkeres/ajanlatkeres-egy/ajanlatkeres-egy.component.html
@@ -1,9 +1,9 @@
 <div class="alapkeret">
   <h5>{{ajanlatkeresservice.cim}}</h5>
   <h6 *ngIf="ajanlatkeresservice.DtoSelectedIndex !== -1">
-    {{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].FELIRATKOZASKOD}}
-    {{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].NEV}},
-    {{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].TELEPULES}}
+    {{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].Ajanlatkereskod}}
+    {{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].Nev}},
+    {{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].Cim}}
   </h6>
   <div>
     <nav>
