--- a/src/app/ajanlatkeres/ajanlatkeres-reszletek/ajanlatkeres-reszletek.component.html
+++ b/src/app/ajanlatkeres/ajanlatkeres-reszletek/ajanlatkeres-reszletek.component.html
@@ -3,62 +3,62 @@
     <tbody>
     <tr>
       <td class="egylabel">Id:</td>
-      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].AJANLATKERESKOD}}</td>
+      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].Ajanlatkereskod}}</td>
     </tr>
     <tr>
       <td class="egylabel">Az ügynök neve:</td>
-      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].UGYNOKNEV}}</td>
+      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].Ugynoknev}}</td>
     </tr>
     <tr>
       <td class="egylabel">Név:</td>
-      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].NEV}}</td>
+      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].Nev}}</td>
     </tr>
     <tr>
       <td class="egylabel">Cím:</td>
-      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].CIM}}</td>
+      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].Cim}}</td>
     </tr>
     <tr>
       <td class="egylabel">Email:</td>
-      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].EMAIL}}</td>
+      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].Email}}</td>
     </tr>
     <tr>
       <td class="egylabel">Telefonszám:</td>
-      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].TELEFONSZAM}}</td>
+      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].Telefonszam}}</td>
     </tr>
 
     <tr>
       <td class="egylabel">Havi fogyasztás, kWh:</td>
-      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].HAVIFOGYASZTASKWH}}</td>
+      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].Havifogyasztaskwh}}</td>
     </tr>
     <tr>
       <td class="egylabel">Havi számla, Ft:</td>
-      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].HAVISZAMLAFT}}</td>
+      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].Haviszamlaft}}</td>
     </tr>
     <tr>
       <td class="egylabel">Napelemek teljesítménye, kW:</td>
-      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].NAPELEMEKTELJESITMENYEKW}}</td>
+      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].Napelemekteljesitmenyekw}}</td>
     </tr>
 
 
     <tr>
       <td class="egylabel">Megjegyzés:</td>
-      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].MEGJEGYZES}}</td>
+      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].Megjegyzes}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozta:</td>
-      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].LETREHOZTA}}</td>
+      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].Letrehozta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Létrehozva:</td>
-      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].LETREHOZVA | datetimehun}}</td>
+      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].Letrehozva | datetimehun}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosította:</td>
-      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].MODOSITOTTA}}</td>
+      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].Modositotta}}</td>
     </tr>
     <tr>
       <td class="egylabel">Módosítva:</td>
-      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].MODOSITVA | datetimehun}}</td>
+      <td>{{ajanlatkeresservice.Dto[ajanlatkeresservice.DtoSelectedIndex].Modositva | datetimehun}}</td>
     </tr>
     </tbody>
   </table>
