--- a/src/app/ajanlatkeres/ajanlatkeres-list/ajanlatkeres-list.component.html
+++ b/src/app/ajanlatkeres/ajanlatkeres-list/ajanlatkeres-list.component.html
@@ -23,18 +23,18 @@
     <tbody>
       <ng-container *ngFor="let item of ajanlatkeresservice.Dto; let i = index">
         <tr>
-          <td style="text-align: right;color: blue;text-decoration: underline;cursor: pointer" (click)="setClickedRow(i)">{{item.AJANLATKERESKOD}}</td>
-          <td>{{item.UGYNOKNEV}}</td>
-          <td>{{item.NEV}}</td>
-          <td>{{item.CIM}}</td>
-          <td>{{item.EMAIL}}</td>
-          <td>{{item.TELEFONSZAM}}</td>
-          <td style="text-align: right">{{item.HAVIFOGYASZTASKWH | number: '1.2-2'}}</td>
-          <td style="text-align: right">{{item.HAVISZAMLAFT | number: '1.2-2'}}</td>
-          <td style="text-align: right">{{item.NAPELEMEKTELJESITMENYEKW | number: '1.2-2'}}</td>
+          <td style="text-align: right;color: blue;text-decoration: underline;cursor: pointer" (click)="setClickedRow(i)">{{item.Ajanlatkereskod}}</td>
+          <td>{{item.Ugynoknev}}</td>
+          <td>{{item.Nev}}</td>
+          <td>{{item.Cim}}</td>
+          <td>{{item.Email}}</td>
+          <td>{{item.Telefonszam}}</td>
+          <td style="text-align: right">{{item.Havifogyasztaskwh | number: '1.2-2'}}</td>
+          <td style="text-align: right">{{item.Haviszamlaft | number: '1.2-2'}}</td>
+          <td style="text-align: right">{{item.Napelemekteljesitmenyekw | number: '1.2-2'}}</td>
         </tr>
-        <tr *ngIf="item.MEGJEGYZES || '' !== ''">
-          <td colspan="9">{{item.MEGJEGYZES}}</td>
+        <tr *ngIf="item.Megjegyzes || '' !== ''">
+          <td colspan="9">{{item.Megjegyzes}}</td>
         </tr>
       </ng-container>
     </tbody>
