--- a/src/app/ajanlatkeres/ajanlatkeres-szerkesztes/ajanlatkeres-szerkesztes.component.html
+++ b/src/app/ajanlatkeres/ajanlatkeres-szerkesztes/ajanlatkeres-szerkesztes.component.html
@@ -8,7 +8,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="ugynoknev"
                readonly="true" required
-               [(ngModel)]="ajanlatkeresservice.DtoEdited.UGYNOKNEV" name="ugynoknev">
+               [(ngModel)]="ajanlatkeresservice.DtoEdited.Ugynoknev" name="ugynoknev">
       </div>
     </div>
 
@@ -19,7 +19,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="nev"
                maxlength="100" required
-               [(ngModel)]="ajanlatkeresservice.DtoEdited.NEV" name="nev">
+               [(ngModel)]="ajanlatkeresservice.DtoEdited.Nev" name="nev">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -29,7 +29,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="cim"
                maxlength="100" required
-               [(ngModel)]="ajanlatkeresservice.DtoEdited.CIM" name="cim">
+               [(ngModel)]="ajanlatkeresservice.DtoEdited.Cim" name="cim">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -39,7 +39,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="email"
                maxlength="100" required
-               [(ngModel)]="ajanlatkeresservice.DtoEdited.EMAIL" name="email">
+               [(ngModel)]="ajanlatkeresservice.DtoEdited.Email" name="email">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -49,7 +49,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="telefon"
                maxlength="100" required
-               [(ngModel)]="ajanlatkeresservice.DtoEdited.TELEFONSZAM" name="telefon">
+               [(ngModel)]="ajanlatkeresservice.DtoEdited.Telefonszam" name="telefon">
       </div>
     </div>
 
@@ -60,7 +60,7 @@
       <div class="col-md-2">
         <input type="number" class="form-control form-control-sm" id="n1"
                maxlength="100"
-               [(ngModel)]="ajanlatkeresservice.DtoEdited.HAVIFOGYASZTASKWH" name="n1">
+               [(ngModel)]="ajanlatkeresservice.DtoEdited.Havifogyasztaskwh" name="n1">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -70,7 +70,7 @@
       <div class="col-md-2">
         <input type="number" class="form-control form-control-sm" id="n2"
                maxlength="100"
-               [(ngModel)]="ajanlatkeresservice.DtoEdited.HAVISZAMLAFT" name="n2">
+               [(ngModel)]="ajanlatkeresservice.DtoEdited.Haviszamlaft" name="n2">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -80,7 +80,7 @@
       <div class="col-md-2">
         <input type="number" class="form-control form-control-sm" id="n3"
                maxlength="100"
-               [(ngModel)]="ajanlatkeresservice.DtoEdited.NAPELEMEKTELJESITMENYEKW" name="n3">
+               [(ngModel)]="ajanlatkeresservice.DtoEdited.Napelemekteljesitmenyekw" name="n3">
       </div>
     </div>
 
@@ -90,7 +90,7 @@
       </div>
       <div class="col-md-6">
         <input type="text" class="form-control form-control-sm" id="megjegyzes"
-               [(ngModel)]="ajanlatkeresservice.DtoEdited.MEGJEGYZES" name="megjegyzes">
+               [(ngModel)]="ajanlatkeresservice.DtoEdited.Megjegyzes" name="megjegyzes">
       </div>
     </div>
 
